Pricing Changelog

### 27 Oct 2022
----

Database
- guidance on backups > 1TB in size
Auth
- added “advanced security features”
- MAUs changed to unlimited for Enterprise
Realtime
— Added new realtime section and pricing
Edge Functions
- Added extra functions cost for Pro tier
- Runtime hours removed
Support
- Security features moved to own section
Platform Security and Compliance
- New section made
- added Access roles
- added Custom Domains
- added Vanity URLs added
Database Compute Add ons
- New label “Optimized Compute”


### 16 June 2022
----

Auth
- New item “MAUs (Monthly Active Users)”
Security & Compliance
- New item: “Security questionnaire help” for enterprise
- New item - “Metrics Endpoint” for enterprise and pro tier users
Database Compute Add ons
- New item: “4XL”
- New item: “8XL”
- New item: “12XL”
- New item: “16XL”
Database
- New item: “Point in time recovery” for enterprise
Clarifications
- General - Clearer language that we charge on a per project per month
- Storage - Uploads for Pro, changed from 3GB → 5GB in title card
- Storage - file upload size - clarified that it can be changed in dashboard
- All products - “Transfer” renamed to “Egress”
- Database compute add-ons - Number of connections more accurate
- Storage - Free tier egress per month clarified

### 31 March 2022
----

Edge Functions pricing announced


### 29 March 2022
----

— Enterprise pricing plan announced

— Pay as you go plan now the same as the Pro plan


27 August 2021
----

- Changes "Dedicated support" to "Designated support".
    - Dedicated = one individual solely focused on an account.
    - Designated = individual who may be helping across various accounts, but still a single point of contact. May be dedicated or non-dedicated.


28 July 2021
----

- Clarified pricing on the "Optimized database instances" to include the starting price of $50/month.


### 29 March 2021
----

Released our Beta pricing.

