@@ -21,14 +21,6 @@
         }
       },
       {
-        "title": "Realtime functionality",
-        "tiers": {
-          "free": true,
-          "pro": true,
-          "enterprise": true
-        }
-      },
-      {
         "title": "Database space",
         "tiers": {
           "free": "Up to 500 MB",
@@ -210,7 +202,7 @@
         "title": "Invocations",
         "tiers": {
           "free": "500K per month",
-          "pro": "2 Million per month",
+          "pro": "2 Million per month, then $2 per 1 million invocations",
           "enterprise": "Unlimited"
         }
       },
@@ -362,6 +354,7 @@
       },
       {
         "title": "Vanity URLs",
+        "tooltip": "We currently screen vanity URLs to ensure they are non-offensive. Please email growth@supabase.io with your project details to request your vanity URL. We process requests in batches once every 14 days.",
         "tiers": {
           "free": false,
           "pro": "$10 per custom domain",
